--- a/rust/domain/Cargo.toml
+++ b/rust/domain/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
+edition = "2021"
 name = "clean-architecture-domain"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.24"
-uuid = { version = "1.3.0", features = ["v4"] }
+async-trait = "0.1.67"
+chrono = {version = "0.4.24", features = ["clock", "std", "serde"], default-features = false}
+thiserror = "1.0.40"
+uuid = {version = "1.3.0", features = ["v4"]}
