--- a/rust/database/Cargo.toml
+++ b/rust/database/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = "2021"
-name = "clean-architecture-adapters"
+name = "clean-architecture-database"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,6 +8,7 @@ version = "0.1.0"
 [dependencies]
 # Workspace
 clean-architecture-domain = {path = "../domain"}
+clean-architecture-shared = {path = "../shared"}
 
 # sqlx
 sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate", "offline"]}
@@ -17,9 +18,12 @@ env_logger = "0.10.0"
 log = "0.4.17"
 tracing = "0.1.37"
 
-chrono = {version = "0.4.24", features = ["clock", "std", "serde"], default-features = false}
-serde = {version = "1.0.158", features = ["derive"]}
-serde_json = "1.0.94"
-thiserror = "1.0.40"
-uuid = {version = "1.3.0", features = ["v4"]}
 async-trait = "0.1.67"
+chrono = {version = "0.4.24", features = ["clock", "std", "serde"], default-features = false}
+config = "0.13.3"
+dotenvy = "0.15.7"
+serde = {version = "1.0.158", features = ["derive"]}
+sha2 = "0.10.6"
+thiserror = "1.0.40"
+tokio = {version = "1.26.0", features = ["full"]}
+uuid = {version = "1.3.0", features = ["v4"]}
