--- a/rust/domain/Cargo.toml
+++ b/rust/domain/Cargo.toml
@@ -6,7 +6,10 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clean-architecture-shared = {path = "../shared"}
+
 async-trait = "0.1.67"
 chrono = {version = "0.4.24", features = ["clock", "std", "serde"], default-features = false}
 thiserror = "1.0.40"
 uuid = {version = "1.3.0", features = ["v4"]}
+validator = {version = "0.16.0", features = ["derive"]}
