--- a/rust/database/Cargo.toml
+++ b/rust/database/Cargo.toml
@@ -26,4 +26,4 @@ serde = {version = "1.0.158", features = ["derive"]}
 sha2 = "0.10.6"
 thiserror = "1.0.40"
 tokio = {version = "1.26.0", features = ["full"]}
-uuid = {version = "1.3.0", features = ["v4"]}
+uuid = {version = "1.3.0", features = ["v4", "serde"]}
