--- a/rust/domain/Cargo.toml
+++ b/rust/domain/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0.158", features = ["derive"] }
 thiserror = "1.0.40"
 uuid = { version = "1.3.0", features = ["v4", "serde"] }
 validator = { version = "0.16.0", features = ["derive"] }
+tracing = "0.1.37"
