--- a/rust/shared/Cargo.toml
+++ b/rust/shared/Cargo.toml
@@ -7,9 +7,12 @@ version = "0.1.0"
 
 [dependencies]
 axum = "0.6.12"
+jsonwebtoken = "8.3.0"
 log = "0.4.17"
 serde = { version = "1.0.158", features = ["derive"] }
 serde_json = "1.0.94"
 sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls"] }
 thiserror = "1.0.40"
 tracing = "0.1.37"
+validator = { version = "0.16.0", features = ["derive"] }
+chrono = { version = "0.4.24", features = ["clock", "std", "serde"], default-features = false }
