--- a/rust/.env
+++ b/rust/.env
@@ -6,11 +6,23 @@ RUST_LOG="info,tower_http=info,sqlx=error"  # silent, trace, debug, info, warn o
 LOGS_PATH="/tmp"
 LOGS_FILE="axum-boilerplate"
 
+# SERVER
+SERVER_URL=127.0.0.1
+SERVER_PORT=8087
+REQUEST_TIMEOUT=10 # In seconds
+
+# JWT
+JWT_SECRET_KEY=mySecretKey
+JWT_LIFETIME=24 # In hour
+
 # Database
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/rust_clean_architecture
-DATABASE_AUTO_MIGRATION=false
+DATABASE_AUTO_MIGRATION=true
 DATABASE_MAX_CONNECTIONS=100
 DATABASE_MIN_CONNECTIONS=10
 DATABASE_MAX_LIFETIME=30
 DATABASE_CONNECT_TIMEOUT=30
 DATABASE_IDLE_TIMEOUT=30
+
+# CORS
+CORS_ALLOW_ORIGIN=https://www.apitic.com,https://toto.com:8080,localhost,pouet  # URL delimited by a comma
