--- a/rust/database/Cargo.toml
+++ b/rust/database/Cargo.toml
@@ -17,6 +17,7 @@ sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono", "m
 env_logger = "0.10.0"
 log = "0.4.17"
 tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
 
 async-trait = "0.1.68"
 chrono = { version = "0.4.24", features = ["clock", "std", "serde"], default-features = false }
@@ -27,3 +28,4 @@ sha2 = "0.10.6"
 thiserror = "1.0.40"
 tokio = { version = "1.26.0", features = ["full"] }
 uuid = { version = "1.3.0", features = ["v4", "serde"] }
+
