--- a/rust/domain/Cargo.toml
+++ b/rust/domain/Cargo.toml
@@ -15,3 +15,4 @@ thiserror = "1.0.40"
 uuid = { version = "1.3.0", features = ["v4", "serde"] }
 validator = { version = "0.16.0", features = ["derive"] }
 tracing = "0.1.37"
+tokio = { version = "1.27.0", features = ["rt", "macros"] }
