--- a/rust/.env
+++ b/rust/.env
@@ -26,3 +26,7 @@ DATABASE_IDLE_TIMEOUT=30
 
 # CORS
 CORS_ALLOW_ORIGIN=https://www.apitic.com,https://toto.com:8080,localhost,pouet  # URL delimited by a comma
+
+# Basic Auth
+BASIC_AUTH_USERNAME=toto
+BASIC_AUTH_PASSWORD=toto
