--- a/rust/.env
+++ b/rust/.env
@@ -1,12 +1,11 @@
 ENVIRONMENT=development # development | production
 
+# Logs
 RUST_LOG="info,tower_http=info,sqlx=error"  # silent, trace, debug, info, warn or error (silent not available for sqlx)
-
-# LOGS
 LOGS_PATH="/tmp"
 LOGS_FILE="axum-boilerplate"
 
-# SERVER
+# Server
 SERVER_URL=127.0.0.1
 SERVER_PORT=8087
 REQUEST_TIMEOUT=10 # In seconds
