--- a/rust/database/Cargo.toml
+++ b/rust/database/Cargo.toml
@@ -28,4 +28,5 @@ sha2 = "0.10.6"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
 uuid = { version = "1.3.0", features = ["v4", "serde"] }
+rand = "0.8.5"
 
