--- a/rust/api/Cargo.toml
+++ b/rust/api/Cargo.toml
@@ -1,48 +1,48 @@
 [package]
+edition = "2021"
 name = "clean-architecture-api"
 version = "0.1.0"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clean-architecture-database = {path = "../database"}
 clean-architecture-domain = {path = "../domain"}
 clean-architecture-shared = {path = "../shared"}
-clean-architecture-database = {path = "../database"}
 
 # Axum
-axum = { version = "0.6.12", features = ["headers", "ws"] }
+axum = {version = "0.6.12", features = ["headers"]}
 
 # Tower
-tower = { version = "0.4.13", features = ["timeout"] }
-tower-http = { version = "0.4.0", features = ["cors", "fs", "request-id", "util"] }
+tower = {version = "0.4.13", features = ["timeout"]}
+tower-http = {version = "0.4.0", features = ["cors", "fs", "request-id", "util"]}
 
 # Hyper
 hyper = "0.14.25"
 
 # sqlx
-sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "offline"] }
+sqlx = {version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "offline"]}
 
 # Log
 env_logger = "0.10.0"
 log = "0.4.17"
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
-tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter", "fmt", "json"] }
+tracing-subscriber = {version = "0.3.16", features = ["registry", "env-filter", "fmt", "json"]}
 
-chrono = { version = "0.4.24", features = ["clock", "std", "serde"], default-features = false }
+bytes = "1.4.0"
+chrono = {version = "0.4.24", features = ["clock", "std", "serde"], default-features = false}
 config = "0.13.3"
 dotenvy = "0.15.7"
-serde = { version = "1.0.159", features = ["derive"] }
-serde_json = "1.0.95"
-thiserror = "1.0.40"
-tokio = { version = "1.27.0", features = ["full"] }
 futures = "0.3.28"
-uuid = "1.3.0"
-jsonwebtoken = "8.3.0"
-bytes = "1.4.0"
-mime = "0.3.17"
-serde_urlencoded = "0.7.1"
 http-auth-basic = "0.3.3"
-tera = "1.18.1"
+jsonwebtoken = "8.3.0"
 lazy_static = "1.4.0"
+mime = "0.3.17"
+serde = {version = "1.0.159", features = ["derive"]}
+serde_json = "1.0.95"
+serde_urlencoded = "0.7.1"
+tera = "1.18.1"
+thiserror = "1.0.40"
+tokio = {version = "1.27.0", features = ["full"]}
+uuid = "1.3.0"
