Continue password reset

--- a/rust/.env
+++ b/rust/.env
@@ -29,3 +29,15 @@ CORS_ALLOW_ORIGIN=https://www.apitic.com,https://toto.com:8080,localhost,pouet  
 # Basic Auth
 BASIC_AUTH_USERNAME=toto
 BASIC_AUTH_PASSWORD=toto
+
+# SMTP
+SMTP_HOST=127.0.0.1
+SMTP_PORT=1025
+SMTP_TIMEOUT=30 # In second
+SMTP_USERNAME= # Laisser vide si pas l'authentification
+SMTP_PASSWORD= # Laisser vide si pas l'authentification
+
+# Forgotten password
+FORGOTTEN_PASSWORD_EXPIRATION_DURATION=1 # In hours
+FORGOTTEN_PASSWORD_BASE_URL=http://localhost
+FORGOTTEN_PASSWORD_EMAIL_FROM=contact@test.com
