--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -17,7 +17,7 @@ tower = { version = "0.4.13", features = ["timeout"] }
 tower-http = { version = "0.4.0", features = ["cors", "fs", "request-id", "util"] }
 
 # Hyper
-hyper = "0.14.25"
+hyper = "0.14.26"
 
 # sqlx
 sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "offline"] }
@@ -48,3 +48,4 @@ tera = "1.18.1"
 thiserror = "1.0.40"
 tokio = { version = "1.27.0", features = ["full"] }
 uuid = "1.3.1"
+validator = { version = "0.16.0", features = ["derive"] }
