--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -38,6 +38,7 @@ futures = "0.3.28"
 http-auth-basic = "0.3.3"
 jsonwebtoken = "8.3.0"
 lazy_static = "1.4.0"
+lettre = "0.10.4"
 mime = "0.3.17"
 rand = "0.8.5"
 serde = { version = "1.0.160", features = ["derive"] }
