Change API structure

--- a/rust/.env
+++ b/rust/.env
@@ -24,7 +24,7 @@ DATABASE_CONNECT_TIMEOUT=30
 DATABASE_IDLE_TIMEOUT=30
 
 # CORS
-CORS_ALLOW_ORIGIN=https://www.apitic.com,https://toto.com:8080,localhost,pouet  # URL delimited by a comma
+CORS_ALLOW_ORIGIN=http://localhost  # URL delimited by a comma
 
 # Basic Auth
 BASIC_AUTH_USERNAME=toto
