[rust] Add Drill

--- a/rust/.env
+++ b/rust/.env
@@ -3,7 +3,7 @@ ENVIRONMENT=development # development | production
 # Logs
 RUST_LOG="info,tower_http=info,sqlx=error"  # silent, trace, debug, info, warn or error (silent not available for sqlx)
 LOGS_PATH="/tmp"
-LOGS_FILE="axum-boilerplate"
+LOGS_FILE="backend_clean_archi"
 
 # Server
 SERVER_URL=127.0.0.1
