--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -10,28 +10,29 @@ clean-architecture-domain = {path = "../domain"}
 clean-architecture-shared = {path = "../shared"}
 
 # Axum
-axum = { version = "0.6.18", features = ["headers"] }
+axum = {version = "0.6.18", features = ["headers"]}
 
 # Tower
-tower = { version = "0.4.13", features = ["timeout"] }
-tower-http = { version = "0.4.0", features = ["cors", "fs", "request-id", "util"] }
+tower = {version = "0.4.13", features = ["timeout"]}
+tower-http = {version = "0.4.0", features = ["cors", "fs", "request-id", "util"]}
 
 # Hyper
 hyper = "0.14.26"
 
 # sqlx
-sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "offline"] }
+sqlx = {version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "offline"]}
 
 # Log
 env_logger = "0.10.0"
 log = "0.4.18"
 tracing = "0.1.37"
 tracing-appender = "0.2.2"
-tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter", "fmt", "json"] }
+tracing-subscriber = {version = "0.3.17", features = ["registry", "env-filter", "fmt", "json"]}
 
 async-trait = "0.1.68"
 bytes = "1.4.0"
-chrono = { version = "0.4.26", features = ["clock", "std", "serde"], default-features = false }
+chrono = {version = "0.4.26", features = ["clock", "std", "serde"], default-features = false}
+clap = {version = "4.3.0", features = ["cargo", "derive"]}
 config = "0.13.3"
 dotenvy = "0.15.7"
 futures = "0.3.28"
@@ -41,12 +42,12 @@ lazy_static = "1.4.0"
 lettre = "0.10.4"
 mime = "0.3.17"
 rand = "0.8.5"
-serde = { version = "1.0.163", features = ["derive"] }
+serde = {version = "1.0.163", features = ["derive"]}
 serde_json = "1.0.96"
 serde_urlencoded = "0.7.1"
 sha2 = "0.10.6"
 tera = "1.19.0"
 thiserror = "1.0.40"
-tokio = { version = "1.28.2", features = ["full"] }
+tokio = {version = "1.28.2", features = ["full"]}
 uuid = "1.3.3"
-validator = { version = "0.16.0", features = ["derive"] }
+validator = {version = "0.16.0", features = ["derive"]}
