--- a/rust/docker-compose.yml
+++ b/rust/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8086:8086"
+    command: serve
     links:
       - mariadb
     networks:
