--- a/rust/.env.docker
+++ b/rust/.env.docker
@@ -41,3 +41,6 @@ SMTP_PASSWORD= # Laisser vide si pas l'authentification
 FORGOTTEN_PASSWORD_EXPIRATION_DURATION=24 # In hours
 FORGOTTEN_PASSWORD_BASE_URL=http://localhost
 FORGOTTEN_PASSWORD_EMAIL_FROM=contact@test.com
+
+# Prometheus metrics
+PROMETHEUS_METRICS_ENABLED=0
