--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -51,3 +51,5 @@ thiserror = "1.0.40"
 tokio = { version = "1.28.2", features = ["full"] }
 uuid = "1.3.3"
 validator = { version = "0.16.0", features = ["derive"] }
+metrics = "0.21.0"
+metrics-exporter-prometheus = "0.12.1"
