--- a/rust/shared/Cargo.toml
+++ b/rust/shared/Cargo.toml
@@ -7,15 +7,15 @@ version = "0.1.0"
 
 [dependencies]
 axum = "0.6.18"
-chrono = { version = "0.4.26", features = ["clock", "std", "serde"], default-features = false }
+chrono = {version = "0.4.26", features = ["clock", "std", "serde"], default-features = false}
 dotenvy = "0.15.7"
 jsonwebtoken = "8.3.0"
 log = "0.4.19"
 rand = "0.8.5"
-serde = { version = "1.0.164", features = ["derive"] }
+serde = {version = "1.0.166", features = ["derive"]}
 serde_json = "1.0.99"
-sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate", "offline"] }
+sqlx = {version = "0.7.0", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal", "migrate"]}
 thiserror = "1.0.40"
-tokio = { version = "1.29.0", features = ["full"] }
+tokio = {version = "1.29.1", features = ["full"]}
 tracing = "0.1.37"
-validator = { version = "0.16.1", features = ["derive"] }
+validator = {version = "0.16.1", features = ["derive"]}
