--- a/rust/domain/Cargo.toml
+++ b/rust/domain/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
-edition = "2021"
 name = "clean-architecture-domain"
-version = "0.1.0"
+version = { workspace = true }
+edition = { workspace = true }
+authors = { workspace = true }
+repository = "https://github.com/fabienbellanger/backends-clean-architecture/rust/domain"
+readme = "../README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clean-architecture-shared = {path = "../shared"}
+clean-architecture-shared = { workspace = true }
 
 async-trait = "0.1.72"
 chrono = { version = "0.4.26", features = ["clock", "std", "serde"], default-features = false }
