Improvement JWT authentication Update deps

--- a/rust/.env.docker
+++ b/rust/.env.docker
@@ -11,7 +11,10 @@ SERVER_PORT=8086
 REQUEST_TIMEOUT=10 # In seconds
 
 # JWT
+JWT_ALGORITHM=ES384 # HS265 | HS384 | HS512 | ES256 | ES384
 JWT_SECRET_KEY=mySecretKey
+JWT_PRIVATE_KEY=private.ec.pem
+JWT_PUBLIC_KEY=public.ec.pem
 JWT_LIFETIME=24 # In hour
 
 # Database
