Change token to access_token in login response

--- a/rust/infrastructure/assets/documentation/doc_api_v1.yml
+++ b/rust/infrastructure/assets/documentation/doc_api_v1.yml
@@ -334,7 +334,7 @@ components:
         email:
           type: string
           format: email
-        token:
+        access_token:
           type: string
         expired_at:
           type: string
@@ -344,7 +344,7 @@ components:
         - lastname
         - firstname
         - email
-        - token
+        - access_token
         - expired_at
     GetUserResponse:
       type: object
