Begin refresh token implementation

--- a/rust/.env.docker
+++ b/rust/.env.docker
@@ -15,7 +15,8 @@ JWT_ALGORITHM=ES384 # HS265 | HS384 | HS512 | ES256 | ES384
 JWT_SECRET_KEY=mySecretKey
 JWT_PRIVATE_KEY=private.ec.pem
 JWT_PUBLIC_KEY=public.ec.pem
-JWT_LIFETIME=24 # In hour
+JWT_ACCESS_LIFETIME=6 # Lifetime for access token in hour
+JWT_REFRESH_LIFETIME=2 # Lifetime for refresh token in day
 
 # Database
 DATABASE_URL=mysql://admin:admin@rust_clean_archi_mariadb:3306/rust_clean_architecture
