--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -47,6 +47,7 @@ metrics = "0.21.1"
 metrics-exporter-prometheus = "0.12.1"
 mime = "0.3.17"
 serde = { version = "1.0.189", features = ["derive"] }
+rand = "0.8.5"
 serde_json = "1.0.107"
 serde_urlencoded = "0.7.1"
 sha2 = "0.10.8"
