Update deps Add test for refresh token

--- a/rust/.env
+++ b/rust/.env
@@ -8,15 +8,15 @@ LOGS_FILE="backend_clean_archi"
 # Server
 SERVER_URL=127.0.0.1
 SERVER_PORT=8087
-REQUEST_TIMEOUT=10 # In seconds
+REQUEST_TIMEOUT=10 # In second
 
 # JWT
 JWT_ALGORITHM=ES384 # HS265 | HS384 | HS512 | ES256 | ES384
 JWT_SECRET_KEY=mySecretKey
 JWT_PRIVATE_KEY=private.ec.pem
 JWT_PUBLIC_KEY=public.ec.pem
-JWT_ACCESS_LIFETIME=6 # Lifetime for access token in hour
-JWT_REFRESH_LIFETIME=2 # Lifetime for refresh token in day
+JWT_ACCESS_LIFETIME=15 # Lifetime for access token in minute
+JWT_REFRESH_LIFETIME=7 # Lifetime for refresh token in day
 
 # Database
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/rust_clean_architecture
@@ -42,7 +42,7 @@ SMTP_USERNAME= # Laisser vide si pas l'authentification
 SMTP_PASSWORD= # Laisser vide si pas l'authentification
 
 # Forgotten password
-FORGOTTEN_PASSWORD_EXPIRATION_DURATION=24 # In hours
+FORGOTTEN_PASSWORD_EXPIRATION_DURATION=24 # In hour
 FORGOTTEN_PASSWORD_BASE_URL=http://localhost
 FORGOTTEN_PASSWORD_EMAIL_FROM=contact@test.com
 
