--- a/rust/infrastructure/assets/documentation/doc_api_v1.yml
+++ b/rust/infrastructure/assets/documentation/doc_api_v1.yml
@@ -76,6 +76,8 @@ paths:
             $ref: "#/components/responses/InternalServerError"
   /forgotten-password/{email}:
     post:
+      security:
+        - bearerAuth: []
       summary: ""
       description: Forgotten password request
       tags:
