--- a/rust/infrastructure/assets/documentation/doc_api_v1.yml
+++ b/rust/infrastructure/assets/documentation/doc_api_v1.yml
@@ -271,6 +271,77 @@ paths:
             $ref: "#/components/responses/NotFound"
         '500':
             $ref: "#/components/responses/InternalServerError"
+  /scopes:
+    get:
+      summary: ""
+      description: List all scopes
+      tags:
+        - "Scopes"
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ScopesResponse"
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '422':
+          $ref: "#/components/responses/UnprocessableEntity"
+        '500':
+          $ref: "#/components/responses/InternalServerError"
+    post:
+      summary: ""
+      description: Scope creation
+      tags:
+        - "Scopes"
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateScopeRequest'
+      responses:
+        '201':
+          description: Created
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '500':
+          $ref: "#/components/responses/InternalServerError"
+  /scopes/{id}:
+    delete:
+      summary: ""
+      description: Delete a scope
+      tags:
+        - "Scopes"
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: Scope ID
+      responses:
+        '204':
+          description: No Content
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+        '404':
+          $ref: "#/components/responses/NotFound"
+        '500':
+          $ref: "#/components/responses/InternalServerError"
 components:
   securitySchemes:
     bearerAuth:
@@ -483,4 +554,37 @@ components:
         - access_token_expired_at
         - refresh_token
         - refresh_token_expired_at
-    
+    CreateScopeRequest:
+      type: object
+      properties:
+        id:
+          type: string
+          minProperties: 4
+      required:
+        - id
+    DeleteScopeRequest:
+      type: object
+      properties:
+        id:
+          type: string
+          minProperties: 4
+      required:
+        - id
+    ScopeResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          minProperties: 4
+        created_at:
+          type: string
+          format: date-time
+      required:
+        - id
+        - created_at
+    ScopesResponse:
+      type: array
+      items:
+        $ref: "#/components/schemas/ScopeResponse"
+      required:
+        - data
