--- a/rust/domain/Cargo.toml
+++ b/rust/domain/Cargo.toml
@@ -11,14 +11,14 @@ readme = "../README.md"
 [dependencies]
 clean-architecture-shared = { workspace = true }
 
-async-trait = "0.1.80"
-chrono = { version = "0.4.38", features = ["clock", "std", "serde"], default-features = false }
-serde = { version = "1.0.200", features = ["derive"] }
-thiserror = "1.0.59"
-uuid = { version = "1.8.0", features = ["v4", "serde"] }
-validator = { version = "0.18.1", features = ["derive"] }
-tracing = "0.1.40"
-tokio = { version = "1.37.0", features = ["rt", "macros"] }
+async-trait = { workspace = true }
+chrono = { workspace = true }
+serde = { workspace = true }
+thiserror = { workspace = true }
+uuid = { workspace = true }
+validator = { workspace = true }
+tracing = { workspace = true }
+tokio = { workspace = true }
 
 [dev-dependencies]
 fake = { version = "2.9.2", features = ["chrono"] }
