--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -13,7 +13,7 @@ clean-architecture-domain = { workspace = true }
 clean-architecture-shared = { workspace = true }
 
 # Axum
-axum = "0.7.5"
+axum = { workspace = true }
 
 # Tower
 tower = { version = "0.4.13", features = ["timeout"] }
@@ -23,36 +23,38 @@ tower-http = { version = "0.5.2", features = ["cors", "fs", "request-id", "util"
 hyper = "1.3.1"
 
 # sqlx
-sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "chrono", "mysql", "macros", "bigdecimal"] }
+sqlx = { workspace = true }
 
 # Log
-log = "0.4.21"
-tracing = "0.1.40"
+log = { workspace = true }
+tracing = { workspace = true }
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt", "json"] }
 
-async-trait = "0.1.80"
-bytes = "1.6.0"
-chrono = { version = "0.4.38", features = ["clock", "std", "serde"], default-features = false }
-clap = { version = "4.5.4", features = ["cargo", "derive"] }
-config = "0.14.0"
-dotenvy = "0.15.7"
-futures = "0.3.30"
-http-auth-basic = "0.3.3"
-jsonwebtoken = "9.3.0"
-lazy_static = "1.4.0"
-lettre = "0.11.7"
+# Metrics
 metrics = "0.22.3"
 metrics-exporter-prometheus = "0.14.0"
+
+async-trait = { workspace = true }
+bytes = "1.6.0"
+chrono = { workspace = true }
+clap = { version = "4.5.4", features = ["cargo", "derive"] }
+config = "0.14.0"
+dotenvy = { workspace = true }
+futures = "0.3.30"
+http-auth-basic = "0.3.3"
+jsonwebtoken = { workspace = true }
+lazy_static = "1.4.0"
+lettre = "0.11.7"
 mime = "0.3.17"
-serde = { version = "1.0.200", features = ["derive"] }
 rand = "0.8.5"
-serde_json = "1.0.116"
-serde_urlencoded = "0.7.1"
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_urlencoded = { workspace = true }
 sha2 = "0.10.8"
 tera = "1.19.1"
-thiserror = "1.0.59"
-tokio = { version = "1.37.0", features = ["full"] }
-uuid = "1.8.0"
-validator = { version = "0.18.1", features = ["derive"] }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+uuid = { workspace = true }
+validator = { workspace = true }
 http-body-util = "0.1.1"
