--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -47,7 +47,7 @@ jsonwebtoken = { workspace = true }
 lazy_static = "1.4.0"
 lettre = "0.11.7"
 mime = "0.3.17"
-rand = "0.8.5"
+rand = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_urlencoded = { workspace = true }
