--- a/rust/shared/Cargo.toml
+++ b/rust/shared/Cargo.toml
@@ -14,7 +14,7 @@ chrono = { workspace = true }
 dotenvy = { workspace = true }
 jsonwebtoken = { workspace = true }
 log = { workspace = true }
-rand = "0.8.5"
+rand = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
