Enabled request body limit

--- a/rust/.env
+++ b/rust/.env
@@ -9,6 +9,7 @@ LOGS_FILE="backend_clean_archi"
 SERVER_URL=127.0.0.1
 SERVER_PORT=8087
 REQUEST_TIMEOUT=10 # In second
+REQUEST_BODY_MAX_SIZE=2048 # In KB
 
 # JWT
 JWT_ALGORITHM=ES384 # HS265 | HS384 | HS512 | ES256 | ES384
