--- a/rust/.env.docker
+++ b/rust/.env.docker
@@ -9,6 +9,7 @@ LOGS_FILE="backend_clean_archi"
 SERVER_URL=0.0.0.0
 SERVER_PORT=8086
 REQUEST_TIMEOUT=10 # In second
+REQUEST_BODY_MAX_SIZE=2048 # In KB
 
 # JWT
 JWT_ALGORITHM=ES384 # HS265 | HS384 | HS512 | ES256 | ES384
