--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -16,7 +16,7 @@ clean-architecture-shared = { workspace = true }
 axum = { workspace = true }
 
 # Tower
-tower = { version = "0.5.0", features = ["timeout"] }
+tower = { version = "0.5.0", features = ["timeout", "util"] }
 tower-http = { version = "0.5.2", features = ["cors", "fs", "request-id", "util"] }
 
 # Hyper
