--- a/rust/infrastructure/Cargo.toml
+++ b/rust/infrastructure/Cargo.toml
@@ -16,11 +16,11 @@ clean-architecture-shared = { workspace = true }
 axum = { workspace = true }
 
 # Tower
-tower = { version = "0.5.0", features = ["timeout", "util"] }
-tower-http = { version = "0.5.2", features = ["cors", "fs", "request-id", "util"] }
+tower = { version = "0.5.1", features = ["timeout", "util"] }
+tower-http = { version = "0.6.2", features = ["cors", "fs", "request-id", "util"] }
 
 # Hyper
-hyper = "1.4.1"
+hyper = "1.5.1"
 
 # sqlx
 sqlx = { workspace = true }
@@ -29,22 +29,22 @@ sqlx = { workspace = true }
 log = { workspace = true }
 tracing = { workspace = true }
 tracing-appender = "0.2.3"
-tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt", "json"] }
+tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter", "fmt", "json"] }
 
 # Metrics
-metrics = "0.23.0"
-metrics-exporter-prometheus = "0.15.3"
+metrics = "0.24.1"
+metrics-exporter-prometheus = "0.16.0"
 
 async-trait = { workspace = true }
-bytes = "1.7.1"
+bytes = "1.9.0"
 chrono = { workspace = true }
-clap = { version = "4.5.16", features = ["cargo", "derive"] }
-config = "0.14.0"
+clap = { version = "4.5.22", features = ["cargo", "derive"] }
+config = "0.14.1"
 dotenvy = { workspace = true }
-futures = "0.3.30"
+futures = "0.3.31"
 http-auth-basic = "0.3.5"
 jsonwebtoken = { workspace = true }
-lettre = "0.11.7"
+lettre = "0.11.10"
 mime = "0.3.17"
 rand = { workspace = true }
 serde = { workspace = true }
@@ -57,3 +57,4 @@ tokio = { workspace = true }
 uuid = { workspace = true }
 validator = { workspace = true }
 http-body-util = "0.1.2"
+bytesize = "1.3.0"
